--- a/Phun App/View Controllers/FeedViewController/APSFeedCollectionViewCell.xib
+++ b/Phun App/View Controllers/FeedViewController/APSFeedCollectionViewCell.xib
@@ -1,18 +1,63 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="APSFeedCollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jt8-9H-iHD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hKl-p3-AB9">
+                        <rect key="frame" x="8" y="8" width="26.5" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0zW-cb-Uda">
+                        <rect key="frame" x="8" y="30.5" width="41" height="24"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpz-eN-olJ">
+                        <rect key="frame" x="8" y="62" width="59" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <constraints>
+                <constraint firstItem="gpz-eN-olJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leadingMargin" id="35U-KZ-OP4"/>
+                <constraint firstItem="0zW-cb-Uda" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leadingMargin" id="ESI-DG-Ib0"/>
+                <constraint firstItem="0zW-cb-Uda" firstAttribute="top" secondItem="hKl-p3-AB9" secondAttribute="bottom" constant="8" symbolic="YES" id="G7b-Pm-yt4"/>
+                <constraint firstItem="jt8-9H-iHD" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="HCm-nw-9aD"/>
+                <constraint firstItem="gpz-eN-olJ" firstAttribute="top" secondItem="0zW-cb-Uda" secondAttribute="bottom" constant="8" symbolic="YES" id="Lua-BU-Lve"/>
+                <constraint firstAttribute="trailing" secondItem="jt8-9H-iHD" secondAttribute="trailing" id="NZX-F2-syP"/>
+                <constraint firstItem="jt8-9H-iHD" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Wle-q0-J2h"/>
+                <constraint firstItem="hKl-p3-AB9" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="topMargin" id="ZJ2-ho-Oqq"/>
+                <constraint firstAttribute="bottom" secondItem="jt8-9H-iHD" secondAttribute="bottom" id="ZiG-rp-uRh"/>
+                <constraint firstItem="hKl-p3-AB9" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leadingMargin" id="nn2-nD-seI"/>
+            </constraints>
+            <size key="customSize" width="320" height="180"/>
+            <connections>
+                <outlet property="backgroundImageView" destination="jt8-9H-iHD" id="HOI-yv-3pu"/>
+                <outlet property="dateLabel" destination="hKl-p3-AB9" id="8Ua-Vt-qAK"/>
+                <outlet property="locationLabel" destination="gpz-eN-olJ" id="xua-Nl-ssc"/>
+                <outlet property="titleLabel" destination="0zW-cb-Uda" id="Gxb-ya-Rk8"/>
+            </connections>
+            <point key="canvasLocation" x="365" y="398"/>
         </collectionViewCell>
     </objects>
 </document>
