--- a/Phun App/Base.lproj/Main.storyboard
+++ b/Phun App/Base.lproj/Main.storyboard
@@ -62,14 +62,78 @@
                         <viewControllerLayoutGuide type="top" id="94M-uu-nmu"/>
                         <viewControllerLayoutGuide type="bottom" id="HuE-Ko-qBS"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="O1l-1q-Roe" customClass="UIScrollView">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="hgE-et-2jH" customClass="APSGradientImageView">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="qUZ-C1-jhg"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="qUZ-C1-jhg"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kE3-lt-3ZZ">
+                                <rect key="frame" x="20" y="133" width="33" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="200" text="Description" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YJM-dJ-UnY">
+                                <rect key="frame" x="20" y="189" width="79" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JqK-wY-biF">
+                                <rect key="frame" x="20" y="157.5" width="52" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kE3-lt-3ZZ" firstAttribute="leading" secondItem="O1l-1q-Roe" secondAttribute="leading" constant="20" symbolic="YES" id="1fc-cR-ULg">
+                                <variation key="heightClass=regular-widthClass=regular" constant="80"/>
+                            </constraint>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="YJM-dJ-UnY" secondAttribute="trailing" constant="20" symbolic="YES" id="3SU-14-JzO">
+                                <variation key="heightClass=regular-widthClass=regular" constant="80"/>
+                            </constraint>
+                            <constraint firstItem="YJM-dJ-UnY" firstAttribute="top" secondItem="JqK-wY-biF" secondAttribute="bottom" constant="8" symbolic="YES" id="AID-Ip-RcA"/>
+                            <constraint firstItem="YJM-dJ-UnY" firstAttribute="leading" secondItem="JqK-wY-biF" secondAttribute="leading" id="BXj-Ih-Z6b"/>
+                            <constraint firstItem="kE3-lt-3ZZ" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="JqK-wY-biF" secondAttribute="trailing" id="KBc-aw-zXa"/>
+                            <constraint firstItem="JqK-wY-biF" firstAttribute="leading" secondItem="kE3-lt-3ZZ" secondAttribute="leading" id="OTV-1S-hOg"/>
+                            <constraint firstItem="hgE-et-2jH" firstAttribute="top" secondItem="O1l-1q-Roe" secondAttribute="topMargin" id="PnN-9b-iOn"/>
+                            <constraint firstItem="JqK-wY-biF" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="YJM-dJ-UnY" secondAttribute="trailing" id="ZI3-yM-N46"/>
+                            <constraint firstItem="hgE-et-2jH" firstAttribute="height" secondItem="O1l-1q-Roe" secondAttribute="height" multiplier="1:3" id="ace-iP-6VF"/>
+                            <constraint firstItem="kE3-lt-3ZZ" firstAttribute="top" secondItem="hgE-et-2jH" secondAttribute="centerY" multiplier="4:3" symbolic="YES" id="bnW-mf-AhN">
+                                <variation key="heightClass=regular-widthClass=regular" constant="80"/>
+                            </constraint>
+                            <constraint firstItem="hgE-et-2jH" firstAttribute="leading" secondItem="O1l-1q-Roe" secondAttribute="leading" id="fCQ-Co-0Zw"/>
+                            <constraint firstAttribute="trailing" secondItem="hgE-et-2jH" secondAttribute="trailing" id="psq-ud-dq8"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="YJM-dJ-UnY" secondAttribute="bottom" constant="20" symbolic="YES" id="wab-bt-8is"/>
+                            <constraint firstItem="JqK-wY-biF" firstAttribute="top" secondItem="kE3-lt-3ZZ" secondAttribute="bottom" constant="8" symbolic="YES" id="yzk-wc-pnQ"/>
+                            <constraint firstItem="hgE-et-2jH" firstAttribute="width" secondItem="O1l-1q-Roe" secondAttribute="width" id="zvC-wk-we0"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="backgroundImageView" destination="hgE-et-2jH" id="7x9-BJ-f0m"/>
+                        <outlet property="dateLabel" destination="kE3-lt-3ZZ" id="WSH-Si-8m5"/>
+                        <outlet property="descriptionLabel" destination="YJM-dJ-UnY" id="2A5-9a-rmu"/>
+                        <outlet property="titleLabel" destination="JqK-wY-biF" id="BJ5-8U-SCd"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NWX-GU-J90" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2106" y="-661"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="placeholder" width="200" height="200"/>
+    </resources>
 </document>
